--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
     "next": "13.4.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5"
+    "eslint-config-next": "13.4.5",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
