--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@mui/material": "^5.13.5",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "firebase": "^10.7.1",
     "formik": "^2.4.2",
     "next": "13.4.5",
+    "next-auth": "^4.24.5",
+    "paytmchecksum": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-slick": "^0.29.0",
